--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
-    height: 100%;
+    height: 100vh;
 }
 
 :root {
