--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 100vh;
 }
 
 .header {
