--- a/style.css
+++ b/style.css
@@ -74,3 +74,8 @@ html, body {
     text-align: center;
     padding: 5px;
 }
+
+.footer a {
+    text-decoration: none;
+    color: var(--darkest-shade);
+}
