--- a/src/style.css
+++ b/src/style.css
@@ -16,3 +16,28 @@ html, body {
 *, *::before, *::after{
     box-sizing: border-box;
 }
+
+body, .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+body {
+    justify-content: center;
+}
+
+.wrapper {
+    height: 100vh;
+    justify-content: flex-start;
+}
+
+.board {
+    display: grid;
+    width: 90vw;
+    height: 40vh;
+    border: solid 2px black;
+}
+.cell {
+    border: solid 1px black;
+}
